@@ -34,6 +34,7 @@ protected:
 	static class Game_clock *gclock;
 	static class Palette *pal;
 	static class Gump_manager *gumpman;
+	static class Party_manager *partyman;
 public:
 	static void init(Game_window *g);
 	};
